--- a/pokemon-react/src/components/App.css
+++ b/pokemon-react/src/components/App.css
@@ -9,3 +9,9 @@ body{
     color:white;
     font-family: sans-serif;
 }
+
+.container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: green;
+}
