--- a/pokemon-react/src/components/App.css
+++ b/pokemon-react/src/components/App.css
@@ -26,19 +26,18 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 1rem;
-    padding: 1rem;
     cursor: pointer;
-
-  
+    margin: 1rem;
+    height: 100px;
 }
 
-
+img{
+width: 100%;
+}
 
 .pokemon-image {
-  width: 100%;
     flex:0.5;
-    height: auto;
+
 }
 
 
