--- a/pokemon-react/src/components/App.css
+++ b/pokemon-react/src/components/App.css
@@ -11,14 +11,19 @@ body {
     font-family: sans-serif;
 }
 
+
+
 .app {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    gap:20px;
 }
 .pokemon-list{
       height: 900px;
       overflow-y: auto;
     overscroll-behavior: contain;
+    
+    
 }
 .pokemon-card {
     background: #292929;
@@ -28,19 +33,30 @@ body {
     align-items: center;
     cursor: pointer;
     margin: 1rem;
+    padding: 1rem;
     height: 100px;
 }
 
-img{
-width: 100%;
-}
 
 .pokemon-image {
-    flex:0.5;
+  width: 80px;
+  height:auto;
+  object-fit:contain;
 
 }
+/* ///pas mon code début */
+/* ✅ Ajoute du style pour les images de types */
+.types-container-images {
+    display: flex;
+    gap: 10px;
+}
 
-
+.types-container-images img {
+    width: 50px; /* ou la taille que tu veux */
+    height: 50px;
+    object-fit: contain;
+}
+/* ///pas mon code fin */
 /* responsivité
 
 @media (width <=600px) {
