--- a/pokemon-react/src/components/App.css
+++ b/pokemon-react/src/components/App.css
@@ -1,86 +1,99 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    outline: solid 1px red;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  outline: solid 1px white;
 }
 
 body {
-    background-color: #ef3e3e;
-    color: white;
-    font-family: sans-serif;
+  background-color: #ef3e3e;
+  color: white;
+  font-family: sans-serif;
 }
 
 
 
 .app {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap:20px;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
 }
-.pokemon-list{
-      height: 900px;
-      overflow-y: auto;
-    overscroll-behavior: contain;
-    
-    
+
+.pokemon-list {
+  height: 900px;
+  overflow-y: auto;
+  overscroll-behavior: contain;
+
+
 }
+
 .pokemon-card {
-    background: #292929;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-    margin: 1rem;
-    padding: 1rem;
-    height: 100px;
+  background: #292929;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  margin: 1rem;
+  padding: 1rem;
+  height: 100px;
 }
 
 
 .pokemon-image {
   width: 80px;
-  height:auto;
-  object-fit:contain;
+  height: auto;
+  object-fit: contain;
 
 }
-/* ///pas mon code début */
-/* ✅ Ajoute du style pour les images de types */
+
+.types-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap:10px;
+
+}
+
 .types-container-images {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 .types-container-images img {
-    width: 50px; /* ou la taille que tu veux */
-    height: 50px;
-    object-fit: contain;
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
 }
-/* ///pas mon code fin */
-/* responsivité
+
+/* responsivité */
 
 @media (width <=600px) {
-  main {
+ .app {
     grid-template-columns: 1fr;
     padding: 5px;
   }
 
-  .pokemon {
+  /* .pokemon {
     margin: 5px;
-  }
+  } */
 
   .pokemon-detail {
     align-self: center;
     order: -2;
   }
+ 
+  .title-types{
+    font-size: 1.4rem;
+  }
 
-
-  .image-choisie {
+  /* .image-choisie {
     width: 10rem;
-  }
+  } */
 
-  .type {
+  /* .type {
     width: 4rem;
-  }
+  } */
 
-} */
+}
