--- a/pokemon-react/src/components/Pokemon-detail.css
+++ b/pokemon-react/src/components/Pokemon-detail.css
@@ -1,4 +1,25 @@
-.pokemon-detail{
-    background: green;
+
+.container-evolution{
+  background: #292929;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  margin: 1rem;
+  padding: 1rem;
+  height: 100px;
 }
 
+img{
+  width: 80px;
+  height: auto;
+  object-fit: contain;
+}
+
+.pasevolution{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+}
