--- a/pokemon-react/src/components/App.css
+++ b/pokemon-react/src/components/App.css
@@ -105,9 +105,6 @@ input::placeholder {
     padding: 5px;
   }
 
-  /* .pokemon {
-    margin: 5px;
-  } */
 
   .pokemon-detail {
     align-self: center;
@@ -118,12 +115,42 @@ input::placeholder {
     font-size: 1.4rem;
   }
 
-  /* .image-choisie {
-    width: 10rem;
-  } */
 
-  /* .type {
-    width: 4rem;
-  } */
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+  position: relative;
+}
+
+.topnav #pokemon-list-mobile{
+  display: none;
+}
+
+.topnav a {
+  color: white;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  display: block;
+}
+
+.topnav a.icon {
+  background: black;
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
+}
 
 }
