--- a/pokemon-react/src/components/App.css
+++ b/pokemon-react/src/components/App.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+.patrick-hand-regular {
+  font-family: "Patrick Hand", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   background-color: #ef3e3e;
   color: white;
